IRConnectionManager : add comment, error handling